--- a/force-app/main/default/classes/TestDriveController.cls
+++ b/force-app/main/default/classes/TestDriveController.cls
@@ -1,4 +1,4 @@
-public class TestDriveController {
+public without sharing class TestDriveController {
 	@AuraEnabled
     public static Contact getContact() {
         Contact theContact =[SELECT Id, Email,FirstName,LastName,Phone FROM Contact WHERE LastName = 'Fisher'];
@@ -33,10 +33,10 @@ public class TestDriveController {
             returnstring = 'error' + e.getMessage();
         }
         //set testdrive status to completed
-        Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_02' LIMIT 1];
+        /*Contact driver = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_02' LIMIT 1];
         Test_Drive__c td =[SELECT Date__c,Status__c FROM Test_Drive__c WHERE Driver__c = :driver.Id LIMIT 1];
 		td.Status__c = 'Completed';
-        update td;
+        update td;*/
         
         return returnstring;
     }
