Completed test drive form

--- a/force-app/main/default/classes/MessageLibrary.cls
+++ b/force-app/main/default/classes/MessageLibrary.cls
@@ -330,7 +330,7 @@ public with sharing class MessageLibrary {
             when 'Testdrive journey' {		
                 journeyImage = 'journeyStart';
             }	
-            when 'I.D. Buzz Purchase Journey' {		
+            when 'Purchase Journey' {		
                 journeyImage = 'journeyPurchase';
             }
             when else {		  // default block, optional
