--- a/force-app/main/default/classes/naviController.cls
+++ b/force-app/main/default/classes/naviController.cls
@@ -2,9 +2,10 @@ public class naviController {
 
     
 @AuraEnabled
-    public static Boolean startTestDrive() {
+    public static Boolean startTestDrive(Test_Drive__c td) {
         //get latest testdrive for data
-        Test_Drive__c td = [SELECT Id, Name FROM Test_Drive__c ORDER BY CreatedDate DESC LIMIT 1];
+        // Test_Drive__c td = [SELECT Id, Name FROM Test_Drive__c where Id = :tid];
+        System.debug(td);
         //get Config
                 demo_setting__c demoSetting = [SELECT dealer_name__c, dealer_email__c FROM demo_setting__c WHERE demo_key__c = 'masterSetting' LIMIT 1];
                 
@@ -14,9 +15,7 @@ public class naviController {
                 Contact dealer = [SELECT Id, Name FROM Contact WHERE demo_key__c = 'Contact_01' LIMIT 1];
                 //get Dealer User
                 Id dealerUser_id = [SELECT Id FROM User WHERE UserName = :demoSetting.dealer_name__c LIMIT 1].Id;
-                
-               
-        
+
                 //create dealer message (portal feed item)
                 portal_feed_item__c pfi = new portal_feed_item__c(
                 	action_no__c = 'Cancel',
