--- a/force-app/main/default/classes/MessageLibrary.cls
+++ b/force-app/main/default/classes/MessageLibrary.cls
@@ -1,4 +1,6 @@
-public with sharing class MessageLibrary {
+public class MessageLibrary {
+
+
 
     //just a test message
     public static void test(Account dealer) {
