Added IoT manager

--- a/force-app/main/default/classes/AfDemoManagerController.cls
+++ b/force-app/main/default/classes/AfDemoManagerController.cls
@@ -1,8 +1,19 @@
 public  class AfDemoManagerController {
     
     @AuraEnabled
-    public static boolean triggerIot(){
-        System.debug('It works');
-        return true;
+    public static boolean triggerIot(String vinValue, Integer iotValue){
+        try{
+            Autoforce_vehicle__e iot = new Autoforce_vehicle__e(
+                deviceId__c = vinValue,
+                air_pressure__c = iotValue,
+                ts__c = Datetime.now()
+            );
+            EventBus.publish(iot);
+            System.debug(iot);
+            return true;
+        }catch(Exception e){
+            System.debug(e.getMessage());
+            return false;
+        }
     }
 }
